--- a/.env.template
+++ b/.env.template
@@ -2,4 +2,5 @@ DISCORD_TOKEN=your_discord_bot_token
 OPENROUTER_API_KEY=your_openrouter_api_key
 REPLICATE_API_TOKEN=your_replicate_api_token
 CLIENT_ID=your_discord_client_id
-LOG_FILES_TO_KEEP=15
+LOG_FILES_TO_KEEP=5
+BOT_NAME=Discord Image Analysis Bot
