--- a/.env.template
+++ b/.env.template
@@ -3,4 +3,6 @@ OPENROUTER_API_KEY=your_openrouter_api_key
 REPLICATE_API_TOKEN=your_replicate_api_token
 CLIENT_ID=your_discord_client_id
 LOG_FILES_TO_KEEP=5
-BOT_NAME=Discord Image Analysis Bot
+BOT_NAME=Discord OpenRouter Bot
+ANALYZE_DATA={"model": "openai/chatgpt-4o-latest"}
+CHAT_DATA={"model": "google/gemini-flash-1.5"}
