--- a/.gitignore
+++ b/.gitignore
@@ -33,11 +33,10 @@ ENV/
 
 # SQLite database
 *.sqlite
-bot_database.db
+*.db
 
 # Logs
-*.log
-bot_log.txt
+logs/
 
 # OS generated files
 .DS_Store
@@ -47,3 +46,6 @@ bot_log.txt
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# Generated images
+generated_images/
