✨ (env.template): add HISTORY_LIMIT variable to configure chat history limit ♻️ (ai_chat.py): refactor HISTORY_LIMIT to use environment variable for flexibility ♻️ (history_command.py): refactor history command to accept channel parameter for better context ✨ (history_utils.py): implement show_history_page function to handle channel-specific history ♻️ (message_operations.py): update insert_message function to include channel_id for better tracking ✨ (message_operations.py): add get_messages_for_channel function to retrieve messages by channel ✨ (message_formatting.py): create format_message function for consistent message formatting ✨ (history_pagination.py): implement HistoryPaginationView for paginated history display 🔧 (bot_initialization.py): set up database during bot initialization for improved reliability ✨ (database_schema.py): add channel_id column to messages table for better message tracking 📝 (config.py): create config file for constants to improve maintainability 💡 (api_utils.py): simplify environment variable loading for chat and analyze data models 📝 (utils): add utility functions for handling history and message formatting for better organization

--- a/.env.template
+++ b/.env.template
@@ -6,3 +6,4 @@ LOG_FILES_TO_KEEP=5
 BOT_NAME=Discord OpenRouter Bot
 ANALYZE_DATA={"model": "openai/chatgpt-4o-latest"}
 CHAT_DATA={"model": "google/gemini-flash-1.5"}
+HISTORY_LIMIT=30
