--- a/.env.template
+++ b/.env.template
@@ -4,6 +4,6 @@ REPLICATE_API_TOKEN=your_replicate_api_token
 CLIENT_ID=your_discord_client_id
 LOG_FILES_TO_KEEP=5
 BOT_NAME=Discord OpenRouter Bot
-ANALYZE_DATA={"model": "openai/chatgpt-4o-latest"}
-CHAT_DATA={"model": "google/gemini-flash-1.5"}
+ANALYZE_DATA=openai/chatgpt-4o-latest
+CHAT_DATA=google/gemini-flash-1.5
 HISTORY_LIMIT=30
